--- a/CS416Project.html
+++ b/CS416Project.html
@@ -7,7 +7,7 @@
 
 <script type="module">
 
-import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
+import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/dist/d3.esm.min.js";
 
 // Declare the chart dimensions and margins.
 const width = 840;
