--- a/CS416Project.html
+++ b/CS416Project.html
@@ -3,10 +3,9 @@
 </head>
 
 <div id="container" class="center"></div>
-
+<script src="./d3.v7.min.js"></script>
 <script type="module">
 
-import * as d3 from "./d3.v7.min.js";
 
 // Declare the chart dimensions and margins.
 const width = 840;
