--- a/CS416Project.html
+++ b/CS416Project.html
@@ -16,7 +16,7 @@ const marginBottom = 30;
 const marginLeft = 40;
 
 // Declare the x (horizontal position) scale.
-const data = d3.csv("./uscovid19_2020_sum.csv");
+const data = await d3.csv("./uscovid19_2020_sum.csv");
 console.log(data);
 const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", 
     "Nov", "Dec"];
