--- a/report.html
+++ b/report.html
@@ -17,7 +17,7 @@ const marginLeft = 40;
 
 // Declare the x (horizontal position) scale.
 const data_all = await d3.csv("./uscovid19_2020_sum.csv");
-console.log(data);
+console.log(data_all);
 const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", 
     "Nov", "Dec"];
 const x = d3.scaleBand()
