change to 500 million

--- a/report.html
+++ b/report.html
@@ -44,7 +44,7 @@ const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "
 const x = d3.scaleBand()
     .domain(months)
     .range([marginLeft, width - marginRight]);
-const y_max = 100; // Milions
+const y_max = 510; // Millions
 // Declare the y (vertical position) scale.
 const y = d3.scaleLinear()
     .domain([0, y_max])
