--- a/report.html
+++ b/report.html
@@ -115,10 +115,14 @@ svg.append("g")
     })
     .attr("width", x.bandwidth() * 2 / 3)
     // Add tooltip when mouse over any bar
+    // Tool tip is the sum of positive, hospitalized and death
+    // Tool tip is positioned right on top of the bar
     .on("mouseover", function(d) {
         d3.select(this)
             .attr("fill", "black");
-        svg.append("text")
+        svg.append("rect")
+            .attr("height", 20)
+            .attr("width", 40)
             .attr("id", "tooltip")
             .attr("x", d => x(d.month_name) + x.bandwidth() * 1 / 6)
             .attr("y", d => y(d.death + d.hospitalized + d.positive) - 10)
@@ -126,9 +130,14 @@ svg.append("g")
             .attr("font-family", "sans-serif")
             .attr("font-size", "12px")
             .attr("font-weight", "bold")
-            .attr("fill", "black")
+            .attr("fill", "white")
             .text(d => d.death + d.hospitalized + d.positive);
+    }).on("mouseout", function(d) {
+        d3.select(this)
+            .attr("fill", "red");
+        d3.select("#tooltip").remove();
     });
+    ;
 // Append the SVG element.
 container.append(svg.node());
 
