--- a/report.html
+++ b/report.html
@@ -119,7 +119,7 @@ svg.append("g")
     // Tool tip is positioned right on top of the bar
     .on("mouseover", function(d) {
         d3.select(this)
-            .attr("fill", "black");
+            .attr("fill", "blue");
         svg.append("rect")
             .attr("height", 20)
             .attr("width", 40)
