--- a/report.html
+++ b/report.html
@@ -123,15 +123,15 @@ svg.append("g")
             .attr("height", 20)
             .attr("width", 40)
             .attr("id", "tooltip")
-            .attr("x", d => x(d.month_name) + x.bandwidth() * 1 / 6)
-            .attr("y", d => y(d.death + d.hospitalized + d.positive) - 10)
+            .attr("x", x(d.month_name) + x.bandwidth() * 1 / 6)
+            .attr("y", y(d.death + d.hospitalized + d.positive) - 10)
             .attr("text-anchor", "middle")
             .attr("font-family", "sans-serif")
             .attr("font-size", "12px")
             .attr("font-weight", "bold")
             .attr("fill", "blue")
-            .text(d => d.death + d.hospitalized + d.positive);
-    }).on("mouseout", function(d) {
+            .text(d.death + d.hospitalized + d.positive);
+    }).on("mouseout", function(event, d) {
         d3.select(this)
             .attr("fill", "red");
         d3.select("#tooltip").remove();
