--- a/report.html
+++ b/report.html
@@ -123,12 +123,14 @@ svg.append("g")
             .attr("height", 20)
             .attr("width", 40)
             .attr("id", "tooltip")
-            .attr("x", x(d.month_name) + x.bandwidth() * 1 / 6)
-            .attr("y", y(d.death + d.hospitalized + d.positive) - 10)
+            .attr("x", x(d.month_name) + x.bandwidth() * 2 / 3)
+            .attr("y", (y(d.death + d.hospitalized + d.positive) - 10)/2)
             .attr("text-anchor", "middle")
             .attr("font-family", "sans-serif")
             .attr("font-size", "12px")
             .attr("font-weight", "bold")
+            // add text color white
+            .attr("font-color", "white")
             .attr("fill", "blue")
             .text(d.death + d.hospitalized + d.positive);
     }).on("mouseout", function(event, d) {
