--- a/report.html
+++ b/report.html
@@ -120,19 +120,21 @@ svg.append("g")
     .on("mouseover", function(event, d) {
         console.log(`d`, d);
         svg.append("rect")
-            .attr("height", 20)
-            .attr("width", 40)
+            .attr("height", 80)
+            .attr("width", 200)
             .attr("id", "tooltip")
-            .attr("x", x(d.month_name) + x.bandwidth() * 2 / 3)
-            .attr("y", (y(d.death + d.hospitalized + d.positive) - 10)/2)
+            .attr("x", x(d.month_name) + x.bandwidth())
+            .attr("y", (y((d.death + d.hospitalized + d.positive) - 10)/2))
+            .attr("fill", "blue")
+        svg.append("text")
+            .attr("id", "tooltiptext")
+            .attr("fill", "white")
             .attr("text-anchor", "middle")
             .attr("font-family", "sans-serif")
             .attr("font-size", "12px")
             .attr("font-weight", "bold")
-            // add text color white
-            .attr("font-color", "white")
-            .attr("fill", "blue")
-            .text(d.death + d.hospitalized + d.positive);
+            .attr("x", x(d.month_name) + x.bandwidth())
+            .attr("y", (y((d.death + d.hospitalized + d.positive) - 10)/2))
     }).on("mouseout", function(event, d) {
         d3.select(this)
             .attr("fill", "red");
