--- a/report.html
+++ b/report.html
@@ -126,7 +126,7 @@ svg.append("g")
             .attr("x", x(d.month_name) + x.bandwidth())
             .attr("y", (y((d.death + d.hospitalized + d.positive) - 10)/2))
             .attr("fill", "blue")
-        svg.append("div")
+        svg.append("text")
             .attr("id", "tooltiptext")
             .attr("fill", "white")
             .attr("text-anchor", "middle")
