--- a/report.html
+++ b/report.html
@@ -557,7 +557,7 @@ function displayMonthChart (input_month_filter) {
     d3.select("#byMonthChart").selectAll("*").remove();
     let month_filter
     if (!input_month_filter) {
-        month_filter = "Dec";
+        month_filter = "Jan";
     } else {
         month_filter = input_month_filter;
     }
@@ -591,16 +591,24 @@ function displayMonthChart (input_month_filter) {
         .attr("width", width)
         .attr("height", height);
 
-    // Add the x-axis.
+    // Add the x-axis, with text rotated 90 degree
     svg.append("g")
         .attr("transform", `translate(0,${height - marginBottom})`)
-        .call(d3.axisBottom(x));
+
+        .call(d3.axisBottom(x))
+        .selectAll("text")
+        .attr("transform", "rotate(-90)")
+        .attr("x", -40)
+        .attr("y", 0)
+        .attr("dy", ".35em")
+        .style("text-anchor", "start");
+
     // Add x-axis label
     svg.append("text")
         .attr("class", "x label")
         .attr("text-anchor", "end")
-        .attr("x", (width - marginRight)/2 + 50)
-        .attr("y", height - marginBottom + 40)
+        .attr("x", width - marginRight + 40)
+        .attr("y", height - marginBottom + 20)
         .attr("font-size", "15px")
         .text("State");
 
