--- a/report.html
+++ b/report.html
@@ -598,10 +598,10 @@ function displayMonthChart (input_month_filter) {
         .call(d3.axisBottom(x))
         .selectAll("text")
         .attr("transform", "rotate(-90)")
-        .attr("x", -40)
+        .attr("x",-10)
         .attr("y", 0)
         .attr("dy", ".35em")
-        .style("text-anchor", "start");
+        .style("text-anchor", "end");
 
     // Add x-axis label
     svg.append("text")
