--- a/report.html
+++ b/report.html
@@ -788,6 +788,52 @@ function displayMonthChart (input_month_filter) {
             d3.select("#tooltip").remove();
             d3.selectAll(".tooltiptext").remove();
         });
+    // Add legend
+    svg.append("rect")
+        .attr("height", 20)
+        .attr("width", 20)
+        .attr("x", width - marginRight + 20)
+        .attr("y", marginTop + 20)
+        .attr("fill", "red");
+    svg.append("text")
+        .attr("class", "legend")
+        .attr("fill", "black")
+        .attr("font-family", "sans-serif")
+        .attr("font-size", "10px")
+        .attr("font-weight", "bold")
+        .attr("x", width - marginRight + 50)
+        .attr("y", marginTop + 35)
+        .text("Deaths");
+    svg.append("rect")
+        .attr("height", 20)
+        .attr("width", 20)
+        .attr("x", width - marginRight + 20)
+        .attr("y", marginTop + 50)
+        .attr("fill", "orange");
+    svg.append("text")
+        .attr("class", "legend")
+        .attr("fill", "black")
+        .attr("font-family", "sans-serif")
+        .attr("font-size", "10px")
+        .attr("font-weight", "bold")
+        .attr("x", width - marginRight + 50)
+        .attr("y", marginTop + 65)
+        .text("Hospitalized");
+        svg.append("rect")
+        .attr("height", 20)
+        .attr("width", 20)
+        .attr("x", width - marginRight + 20)
+        .attr("y", marginTop + 80)
+        .attr("fill", "steelblue");
+    svg.append("text")
+        .attr("class", "legend")
+        .attr("fill", "black")
+        .attr("font-family", "sans-serif")
+        .attr("font-size", "10px")
+        .attr("font-weight", "bold")
+        .attr("x", width - marginRight + 50)
+        .attr("y", marginTop + 95)
+        .text("Positive");
     
     byMonthChart.append(svg.node());
     
@@ -1019,8 +1065,6 @@ function displayStateChart (input_state_filter) {
             d3.selectAll(".tooltiptext").remove();
         });
     // Add legend
-
-
     svg.append("rect")
         .attr("height", 20)
         .attr("width", 20)
